--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,4 @@
 MONGO_LOGIN='vladiyar'
-MONGO_PASSWORD=''
+MONGO_PASSWORD='SOME_PASSWORD'
+MONGO_HOST='mongodb+srv://'
+MONGO_ROUTE='@cluster0.6n1wt.mongodb.net/blackJack?retryWrites=true&w=majority'
